# macwx

./: CMakeLists.txt
include/: frame.h  main.h  resource_provider.h  taskbar.h
resource/: error_icon.h  error_indicator.h  healthy_icon.h  healthy_indicator.h  logo.h  not_found_indicator.h  warning_indicator.h
src/: frame.cpp  main.cpp  resource_provider.cpp  taskbar.cpp
